<resources>
    <string name="app_name">Skripsi</string>
    <string name="forward">Forward</string>
    <string name="right">Right</string>
    <string name="backward">Backward</string>
    <string name="left">Left</string>
    <string name="streaming">Streaming</string>
    <string name="flashlight">Flashlight</string>
    <string name="start">START</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_address_fill">IP Address:</string>
    <string name="name">Nama: Taufik Akbar</string>
    <string name="nim">NIM: 162019019</string>
</resources>