<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:id="@+id/img_home_stream"
        android:layout_width="400dp"
        android:layout_height="225dp"
        android:contentDescription="@string/streaming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_d_pad"
        android:backgroundTint="#9C9C9C80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_home_forward"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/forward"
        android:rotation="270"
        app:icon="@drawable/ic_arrow"
        app:iconSize="28dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_right"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_home_right"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/right"
        app:icon="@drawable/ic_arrow"
        app:iconSize="28dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_home_backward"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btn_home_backward"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/backward"
        android:rotation="90"
        app:icon="@drawable/ic_arrow"
        app:iconSize="28dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_left"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_home_left"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/left"
        android:rotation="180"
        app:icon="@drawable/ic_arrow"
        app:iconSize="28dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/btn_home_forward"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/btn_home_flash"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_d_pad"
        android:backgroundTint="@color/secondary"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ic_flashlight_on_24"
        android:contentDescription="@string/flashlight" />

</androidx.constraintlayout.widget.ConstraintLayout>